Add boilerplate HTML and begin page content

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,10 +1,12 @@
 * {
-  font-family: Helvetica, sans-serif;
+  font-family: Verdana, sans-serif;
 }
 
 
 h1, h2{
-  color: DarkGreen;
+  color: White;
+  background-color: black;
+  text-align: center;
 }
 
 h3 {
@@ -12,12 +14,22 @@ h3 {
 }
 
 
-p,
-li {
-  font-size: 18px;
+p{
+  text-decoration: none;
+  text-align: center;
+  font-size: 16px;
+  color: Aquamarine;
 }
 
 
 a {
   text-decoration: none;
+  text-align: center;
+  font-size: 16px;
+  color: Aquamarine;
+}
+
+body {
+background-color: black;
+text-align: center;
 }
