--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,32 +1,49 @@
 * {
-  font-family: Verdana, sans-serif;
+  font-family: Verdana;
 }
 
 
-h1, h2{
+h1{
   color: White;
   background-color: black;
   text-align: center;
+  font-size: 50px;
 }
 
-h3 {
-  color: SeaGreen;
+h2{
+  color: White;
+  background-color: black;
+  text-align: center;
+  font-weight: 300;
+  font-size: 42px;
 }
 
 
-p{
+.aquamarine{
+  color: aquamarine;
+}
+
+.size{
+  font-size: 16px;
+}
+
+.center{
+  text-align: center;
+}
+
+
+.copyright{
+  text-align: right;
+  font-size: 16px;
+  color: gray;
+}
+
+p {
+font-family: Verdana;
   text-decoration: none;
   text-align: center;
-  font-size: 16px;
-  color: Aquamarine;
-}
-
-
-a {
-  text-decoration: none;
-  text-align: center;
-  font-size: 16px;
-  color: Aquamarine;
+  font-size: 21px;
+  color: gray;
 }
 
 body {
